--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+appdirs==1.4.3
+attrs==19.1.0
+black==19.3b0
+Click==7.0
+configparser==3.7.4
+convcifar==0.1.0
 entrypoints==0.3
 flake8==3.7.7
 jedi==0.13.3
@@ -8,6 +14,12 @@ Pillow==6.0.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
 rope==0.14.0
+scikit-learn==0.20.3
+scipy==1.2.1
 six==1.12.0
+skorch==0.5.0.post0
+tabulate==0.8.3
+toml==0.10.0
 torch==1.0.1.post2
 torchvision==0.2.2.post3
+tqdm==4.31.1
