--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 appdirs==1.4.3
 attrs==19.1.0
 black==19.3b0
+cifarconv==0.1.0
 Click==7.0
 configparser==3.7.4
-convcifar==0.1.0
 entrypoints==0.3
 flake8==3.7.7
 jedi==0.13.3
 mccabe==0.6.1
+mypy==0.700
+mypy-extensions==0.4.1
 numpy==1.16.2
 parso==0.3.4
 Pillow==6.0.0
+pkg-resources==0.0.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
 rope==0.14.0
@@ -23,3 +26,4 @@ toml==0.10.0
 torch==1.0.1.post2
 torchvision==0.2.2.post3
 tqdm==4.31.1
+typed-ast==1.3.1
