--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .vscode/
+models/*.pkl
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -108,4 +109,3 @@ cifarconv.env/*
 
 # extra directories
 data/*
-models/*
