--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,42 @@
+absl-py==0.7.1
 appdirs==1.4.3
+astor==0.7.1
 attrs==19.1.0
 black==19.3b0
-cifarconv==0.1.0
 Click==7.0
 configparser==3.7.4
 entrypoints==0.3
 flake8==3.7.7
+gast==0.2.2
+grpcio==1.19.0
+h5py==2.9.0
 jedi==0.13.3
+Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+Markdown==3.1
 mccabe==0.6.1
-mypy==0.700
-mypy-extensions==0.4.1
+mock==2.0.0
 numpy==1.16.2
 parso==0.3.4
+pbr==5.1.3
 Pillow==6.0.0
+protobuf==3.7.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
+PyYAML==5.1
 rope==0.14.0
 scikit-learn==0.20.3
 scipy==1.2.1
 six==1.12.0
 skorch==0.5.0.post0
 tabulate==0.8.3
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
 toml==0.10.0
 torch==1.0.1.post2
 torchvision==0.2.2.post3
 tqdm==4.31.1
-typed-ast==1.3.1
+Werkzeug==0.15.2
